--- a/html/index.html
+++ b/html/index.html
@@ -2,11 +2,11 @@
 <html>
 
   <head>
+    <title>INTERVAL TIMER</title>
     <link rel="stylesheet/less" href="../css/style.less">
     <link rel="stylesheet/less" href="../css/pallette.less">
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
   </head>
 
   <body>
@@ -112,6 +112,7 @@
     <script src="../js/colors.js"></script>
     <script src="../js/images.js"></script>
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
   </body>
 
 </html>
