load css properly after less compilation

--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
 
   <head>
     <title>INTERVAL TIMER</title>
-    <link rel="stylesheet/less" href="../css/style.less">
-    <link rel="stylesheet/less" href="../css/pallette.less">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/pallette.css">
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
@@ -111,8 +111,6 @@
     <script src="../js/toast.js"></script>
     <script src="../js/colors.js"></script>
     <script src="../js/images.js"></script>
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
   </body>
 
 </html>
